@@ -20,6 +20,7 @@
 - fixed `HTMLParser.?.find()` method (fixed results)
 - extended `QueryBuilder.gridfilter()` by adding `=EXACT_VALUE` or `=EXACT_VALUE1,EXACT_VALUE2`
 - IMPORTANT: updated `RESTBuilder` XML response, now it returns `HTMLParser` output
+- fixed removing of multiple spaces in the `String.toName()` method
 
 ========================
 0.0.12
